--- a/core/templates/master.html
+++ b/core/templates/master.html
@@ -27,12 +27,12 @@
     
 </head>
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg border-bottom border-1 border p-3" style="background-color: #c6c6c6;">
+    <nav class="navbar sticky-top navbar-expand-lg border-bottom border-1 border p-3 shadow" style="background-color: #c6c6c6;">
         <div class="container d-flex justify-content-between align-items-center">
             {% if request.session.perfil_atual == 'Administrador' %}
             <div class="fade-in_sair" id="sair"></div>
                 <!-- Imagem à esquerda -->
-                <a href="#" class="nav-link">
+                <a href="{% url 'core:main' %}" class="nav-link">
                     <img src='{% static "img/logoGHpreta.png" %}'style="width: 150px;">
                 </a>
         
@@ -45,7 +45,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Reservas</a>
+                            <a class="nav-link" href="{% url 'reservas:index' %}">Reservas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Quartos</a>
@@ -55,9 +55,6 @@
                         </li>
                         <li class="nav-item">
                                 <a class="nav-link" href="#">Criar Reservas</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Gerenciar Quartos</a>
                             </li>
                         </li>
                         <li class="nav-item me-2">
@@ -75,7 +72,7 @@
                 {% if request.session.perfil_atual == 'Funcionario'%}
                 <div class="fade-in_sair" id="sair"></div>
                     <!-- Imagem à esquerda -->
-                    <a href="#" class="nav-link">
+                    <a href="{% url 'core:main' %}" class="nav-link">
                         <img src='{% static "img/logoGHpreta.png" %}'style="width: 150px;">
                     </a>
             
@@ -87,6 +84,9 @@
                     <!-- Itens do menu alinhados à direita -->
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'reservas:index' %}">Reservas</a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Criar Reservas</a>
                             </li>
@@ -104,7 +104,7 @@
                 {% else %}
                 <div class="fade-in_sair" id="sair"></div>
                     <!-- Imagem à esquerda -->
-                    <a href="#" class="nav-link">
+                    <a href="{% url 'core:main' %}" class="nav-link">
                         <img src='{% static "img/logoGHpreta.png" %}'style="width: 150px;">
                     </a>
             
@@ -138,7 +138,31 @@
     <div class="fade-in" id="minhaDiv">
         {% block conteudo %}
         {% endblock %}
-    </div>     
+    </div>
+    <footer id="rodape" class="text-light py-4 mt-5" style="background:rgb(66, 66, 66);">
+        <div class="container text-center">
+            <h5 class="fw-bold"><img src='{% static "img/Logo GestoriiHost Branca.png" %}'style="width: 150px;"> - Sistema de Gerenciamento de Hotelaria</h5>
+            
+            <button id="btnSobre" class="btn btn-outline-light btn-sm mt-2">Sobre</button>
+
+            <p class="mt-3 mb-1">
+                Este sistema está licenciado sob 
+                <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noopener noreferrer" class="text-info text-decoration-none">
+                    Licença Creative Commons &copy; 4.0
+                </a> 
+                <img src="{% static 'img/creativecommons.png' %}" width="45" alt="Creative Commons">
+            </p>
+
+            <p class="mb-0">
+                Disponível para download em 
+                <a href="https://github.com/lur4n/gestoriihost" target="_blank" rel="noopener noreferrer" class="text-info text-decoration-none">
+                    github.com/lur4n/gestoriihost
+                </a> 
+                <img src="{% static 'img/github.png' %}" width="18" alt="GitHub">
+            </p>
+        </div>
+    </footer>
+
     <script>
         $(document).ready(function() {
             toastr.options = {
