--- a/core/templates/master.html
+++ b/core/templates/master.html
@@ -49,14 +49,17 @@
                             <a class="nav-link" href="{% url 'reservas:index' %}">Reservas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Quartos</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="#">Cadastros</a>
                         </li>
                         <li class="nav-item">
-                                <a class="nav-link" href="#">Criar Reservas</a>
-                            </li>
+                           <a class="nav-link" href="{% url 'cadastros:criar_reserva' %}">Criar Reservas</a>
+                        </li>
+                        <li class="nav-item me-2">
+                           <a class="nav-link" href="{% url 'cadastros:criar_hospede' %}">Criar Hospede</a>
+                        </li>
+                        <li class="nav-item me-2">
+                           <a class="nav-link" href="{% url 'cadastros:criar_quarto' %}">Criar Quartos</a>
+                        </li>
                         </li>
                         <li class="nav-item me-2">
                             <a class="nav-link" href="#">Relatórios</a>
@@ -92,7 +95,10 @@
                                 <a class="nav-link" href="#">Criar Reservas</a>
                             </li>
                             <li class="nav-item me-2">
-                                <a class="nav-link" href="#">Gerenciar Quartos</a>
+                                <a class="nav-link" href="#">Criar Hospede</a>
+                            </li>
+                            <li class="nav-item me-2">
+                                <a class="nav-link" href="#">Criar Quartos</a>
                             </li>
                             <li class="nav-item">
                                 <a href="{% url 'autenticacao:logout' %}">
