--- a/reservas/templates/editar_reserva.html
+++ b/reservas/templates/editar_reserva.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col-2">
                <label for="inputZip" class="form-label">Diárias</label>
-               <input type="text" class="form-control shadow" id="txtDiaria_{{reserva.id}}">
+               <input type="text" class="form-control shadow" id="txtDiaria_{{reserva.id}}" value="{{reserva.diaria}}">
             </div>
          </div>
          <div class="row mt-3">
